--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,14 @@
 general:
   kafka-topic: topic
+
+spring:
+  kafka:
+    consumer:
+      auto-offset-reset: earliest
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.value.default.type: com.jpmc.midascore.foundation.Transaction
+        spring.json.trusted.packages: com.jpmc.midascore.foundation
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
